<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="startDateTime">开始日期时间</string>
    <string name="endDateTime">结束日期时间</string>
    <string name="my_all_order">我的订单</string>
    <string name="choose_order">确认订单</string>
    <string name="shopping_cart">购物车</string>
    <string name="city_name">所在城市</string>
    <string name="city_search">正在定位中...</string>
    <string name="city_choose">选择城市</string>
    <string name="city_location">城市定位</string>
    <string name="choosecity">选择城市</string>
    <string name="prepare_phone">备用电话</string>
    <string name="address_add_goback">添加地址</string>
    <string name="detail_address">详细地址</string>
    <string name="default_phone">13117532652</string>
    <string name="contracts_phone">联系电话</string>
    <string name="defualt_name">释然</string>
    <string name="address_contacts">联系人</string>
    <string name="address_person_update">修改地址</string>
    <string name="btn_add_order_address">添加地址</string>
    <string name="person_order_address">收货地址</string>
    <string name="click_to_show_big_picture">点击产看大图</string>
    <string name="buy_now">立刻购买</string>
    <string name="goods_detail_title">商品详情</string>

    <string name="app_name">car</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- main -->
    <string name="car_str_find">找车</string>
    <string name="car_str_news">资讯</string>
    <string name="car_str_price">降价</string>
    <string name="car_str_question">问答</string>
    <string name="car_str_self">我的</string>

    <!-- news -->
    <string name="news_str_title">资讯</string>
    <string name="news_str_important">要闻</string>
    <string name="news_str_car">新车</string>
    <string name="news_str_buy">导购</string>
    <string name="news_str_try">试车</string>
    <string name="news_str_picture">图解</string>
    <string name="news_str_market">行业</string>

    <!-- find -->
    <string name="find_str_brand">品牌找车</string>
    <string name="find_str_filter">精准找车</string>
    <string name="find_str_price">价格</string>
    <string name="find_str_level">级别</string>
    <string name="find_str_pai">排量</string>
    <string name="find_str_bian">变速箱</string>
    <string name="fragment_find_str_price1">5万以下</string>
    <string name="fragment_find_str_price2">5&#8211;8万</string>
    <string name="fragment_find_str_price3">8&#8211;12万</string>
    <string name="fragment_find_str_level1">微型车</string>
    <string name="fragment_find_str_level2">小型车</string>
    <string name="fragment_find_str_level3">紧凑型</string>
    <string name="fragment_find_str_pai1">1.3L以下</string>
    <string name="fragment_find_str_pai2">1.3L&#8211;1.6L</string>
    <string name="fragment_find_str_pai3">1.7L&#8211;2.0L</string>
    <string name="fragment_find_str_bian1">手动挡</string>
    <string name="fragment_find_str_bian2">自动挡</string>
    <string name="fragment_find_str_bian3">手自一体</string>
    <string name="fragent_find_search">搜索</string>
    
    <!-- 圆角指示器 -->
    <bool name="default_circle_indicator_centered">true</bool>
    <bool name="default_circle_indicator_snap">false</bool>

    <integer name="default_circle_indicator_orientation">0</integer>
    
    <!-- 我的 -->
    <string name="my_name">我的</string>
    <string name="clicklogin">点击登录</string>
    <string name="my_login">登录</string>
    <string name="my_register">注册</string>
    <string name="login_user_hint">邮箱/手机号/用户名</string>
    <string name="login_pass_hint">密码</string>
    <string name="login_ver_hint">验证码 </string>
    <string name="register_title">注册</string>
    <string name="register_phone_default">输入手机号</string>
    <string name="register_get_check_num">获取验证码</string>
    <string name="register_check_num_default">输入验证码</string>
    <string name="register_upass_default">需组合数字、字母或符号</string>
    <string name="register_info">我已看过并同意易车网《用户使用协议》</string>
    
    <!-- 用于记录距离瀑布流中记录图片顶部底部的高度  -->
    <string name="border_top">Border Top</string>
    <string name="border_bottom">Border Bottom</string>
    <string name="image_url">Image Url</string>

</resources>