<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/white">
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:id="@+id/login_layout">
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton 
                android:layout_marginLeft="10dp"
                android:id="@+id/login_back"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_back_u"
                android:padding="@dimen/normal_space"
                android:contentDescription="@null"
                android:background="@color/white"
                android:layout_gravity="center_vertical"/>
           <LinearLayout 
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="60dp"
             android:gravity="center"
             android:orientation="horizontal">
              <TextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_login"
                android:padding="@dimen/normal_space"
                android:textSize="@dimen/title_text_size"
                android:background="@color/white"
                android:textColor="@color/title_color"
                android:gravity="center_horizontal"/>
           </LinearLayout>
           <TextView 
                android:id="@+id/login_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="注册"
                android:layout_marginTop="14dp"
                android:padding="@dimen/normal_space"
                android:textColor="@color/normal_orange_color"
                android:background="@drawable/my_textview_bg_color"/>
        </LinearLayout>
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="@dimen/normal_space"
            android:background="@color/normal_orange_color"/>
        <EditText 
            android:id="@+id/login_uname"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_input_height"
            android:background="@drawable/mini_block_item_normal"
            android:drawablePadding="@dimen/normal_space"
            android:drawableLeft="@drawable/login_user"
            android:hint="@string/login_user_hint"
            android:inputType="text"
            android:singleLine="true"
            android:layout_marginLeft="@dimen/normal_space"/>
         <EditText 
            android:id="@+id/login_pass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_input_height"
            android:background="@drawable/mini_block_item_normal"
            android:drawablePadding="@dimen/normal_space"
            android:drawableLeft="@drawable/login_password"
            android:hint="@string/login_pass_hint"
            android:inputType="text"
            android:singleLine="true"
            android:layout_marginLeft="@dimen/normal_space"/>
         <LinearLayout 
             android:layout_width="match_parent"
             android:layout_height="@dimen/normal_input_height"
             android:background="@drawable/mini_block_item_normal"
             android:orientation="horizontal">
            <EditText 
                android:id="@+id/login_check_num"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/normal_space"
                android:background="@null"
                android:drawableLeft="@drawable/login_ver"
                android:hint="@string/login_ver_hint"
                android:inputType="text"
                android:singleLine="true"
                android:drawablePadding="@dimen/normal_space"/>
            <TextView android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/normal_bg_color"/>
            <Button 
              android:id="@+id/login_check_random"
              android:layout_width="0dp"
              android:layout_height="match_parent"
              android:layout_weight="1"
              android:background="@null"
              android:gravity="center"
              android:textColor="@color/normal_orange_color"
              android:textSize="@dimen/title_text_size"/>
        </LinearLayout>
    </LinearLayout>
    <Button 
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_space"
            android:background="@drawable/my_btn_bg_color"
            android:padding="@dimen/little_space"
            android:text="登录"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_defalut"
            android:layout_below="@+id/login_layout"/>
      <RelativeLayout 
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
          android:paddingTop="@dimen/big_space"
          android:paddingBottom="@dimen/big_space"
          android:background="@drawable/special">
          <TextView 
              android:id="@+id/login_by_weixin"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:drawableLeft="@drawable/weixin_btn"
              android:drawablePadding="@dimen/little_space"
              android:gravity="center_vertical"
              android:scaleX="0.7"
              android:scaleY="0.7"
              android:text="微信登录"
              android:textSize="@dimen/text_size_defalut"/>
          <TextView 
              android:id="@+id/login_by_qq"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:drawableLeft="@drawable/qq_btn"
              android:drawablePadding="@dimen/little_space"
              android:gravity="center_vertical"
              android:scaleX="0.7"
              android:scaleY="0.7"
              android:text="QQ登录"
              android:textSize="@dimen/text_size_defalut"
              android:layout_toRightOf="@+id/login_by_weixin"
              android:layout_marginLeft="35dp"/>
      </RelativeLayout>
</RelativeLayout>
